2004-10-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Make the restart game controls insensitive at the
	beginning of the game.

	* sol.c:	
	* dialog.c: Remove the seed UI (we still need the actual seed so
	we can reset the game). Also cleaned up some code that was
	unnecessarily setting up the seed and fixed a bug that would have
	led to failed games being restarted indefinitely.

2004-10-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: Patch from jrb to fix a crasher with the find
	functionality in "Select a Game". See bug #154183.

2004-08-23  callum  <callum@spooky-possum.org>

	* events.c (button_press_event): Make sure that the size of the window
	is set properly for right-click reveals. Fixes bug #150796.

	* menu.c (help_update_game_name): 	
	* sol.c (game_file_to_name): Give an untranslated name to the menu
	so it is translated properly. Also use appropriate underscores in
	the gnome_app* calls so that it is hooked in properly. Fixes bug
	#148698. Also fix the menu hint so that it appears in the status bar.
	
	* sol.c (game_name_to_file): Make --variation accept file names as
	well as the english name. This is a sop to i18n by making the same
	cryptic code available to everyone.

2004-08-16  callum  <callum@spooky-possum.org>

	* card.c (get_card_picture): Added code to handle jokers. This
	caused thieves.scm to crash on startup.

	* elevator.scm (new-game): Also a layout problem (bug #150181).

	* eagle_wing.scm (new-game): Fix the layout to work with the
	scaling code. Bug #150179.

2004-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* pileon.scm (new-game): Fix pileon to use the new layout
	units. Fixes bug #148699.

2004-07-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* streets_and_alleys.scm (button-double-clicked): Fix logic in
	double click handling and prevent crashes (fixes bug #147996).

2004-07-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: