@@ -1,3 +1,8 @@
+Fri Nov  5 04:03:33 2004  Jonathan Blandford  <jrb@redhat.com>
+
+	* poker.scm (new-game): deal a card face up initially, and always
+	flip a card
+
 2004-10-13  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* menu.c: Make the restart game controls insensitive at the
